[package]
name = "impatient-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }

[profile]

[profile.dev]
opt-level = 1

[profile.dev.package]

[profile.dev.package."*"]
opt-level = 3
